--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 
 <header>
-    <div class="container clearfix">
+    <div class="container">
         <a href=""><h1 id="logo">Floor Coat Inc.</h1></a>
         <nav>
             <a href="">Residential</a>
