ipad size works now. Still gotta do the phone size properly

--- a/index.html
+++ b/index.html
@@ -37,32 +37,27 @@
 <div id="main">
 
 
-    <!--Horizontal Tab-->
+    <!-- Banner -->
     <div id="horizontalTab">
 
-
         <div id="poly" class="banner">
-          
-                <div class="row">
-                    <div class="col-xs-4">
-                        <img class="img-responsive img-thumbnail" src="images/banner/poly-1.JPG" alt="" />
-                    </div>
-                    <div class="col-xs-4 center">
-                        <h2>Polyaspartic Coating</h2>
-                        <h3>Durable</h3>
-                        <h3>Non-slipping</h3>
-                        <h3>Choose your pattern and color</h3>
-                        <h3>Residential & Commercial</h3>
-                        <a class="btn btn-large btn-transparent" href="#">Learn More</a>
-                    </div>
-                    <div class="col-xs-4">
-                        <img class="img-responsive img-thumbnail" src="images/banner/poly-2.JPG" alt="" />
-                    </div>
-
+            <div class="row">
+                <div class="col-xs-4">
+                    <img class="img-responsive img-thumbnail" src="images/banner/poly-1.JPG" alt="" />
                 </div>
-   
-
+                <div class="col-xs-4 center">
+                    <h2>Polyaspartic Coating</h2>
+                    <h3>Durable</h3>
+                    <h3>Non-slipping</h3>
+                    <h3>Choose your pattern and color</h3>
+                    <h3>Residential & Commercial</h3>
+                </div>
+                <div class="col-xs-4">
+                    <img class="img-responsive img-thumbnail" src="images/banner/poly-2.JPG" alt="" />
+                </div>
+            </div>
         </div>
+
         <div id="epoxy" class="banner">
                 <div class="row">
                     <div class="col-xs-4">
@@ -74,7 +69,6 @@
                         <h3>Custom Colors & Patterns</h3>
                         <h3>Endless Possibilities</h3>
                         <h3>Residential & Commercial</h3>
-                        <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                     </div>
                     <div class="col-xs-4">
                         <img class="img-responsive img-thumbnail" src="images/banner/metallic-epoxy-2.JPG" alt="" />
@@ -82,8 +76,8 @@
                 </div>
 
         </div>
-        <div id="grind" class="banner">
 
+        <div id="grind" class="banner">
             <div class="row">
                 <div class="col-xs-4">
                     <img class="img-responsive img-thumbnail" src="images/banner/gp-01.JPG" alt="" />
@@ -93,18 +87,14 @@
                     <h3>Salt & Pepper</h3>
                     <h3>Full Exposure</h3>
                     <h3>Residential & Commercial</h3>
-                    <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                 </div>
                 <div class="col-xs-4">
                     <img class="img-responsive img-thumbnail" src="images/banner/gp-02.JPG" alt="" />
                 </div>
             </div>
-
-
         </div>
 
         <div id="custom" class="banner">
-
             <div class="row">
                 <div class="col-xs-4">
                     <img class="img-responsive img-thumbnail" src="images/banner/custom-pool-poly.JPG" alt="" />
@@ -114,14 +104,11 @@
                     <h3>Logos</h3>
                     <h3>Pools</h3>
                     <h3>Plus More...</h3>
-                    <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                 </div>
                 <div class="col-xs-4">
                     <img class="img-responsive img-thumbnail" src="images/banner/custom-logo.JPG" alt="" />
                 </div>
             </div>
-
-
         </div>        
 
         <ul class="center">
@@ -131,8 +118,8 @@
             <li><a href="#custom">Custom Options</a></li>
         </ul>
 
-
     </div>
+    <!-- /Banner -->
 
     <!-- Main Info -->
     <div class="main-info">
