--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <img class="img-responsive img-thumbnail" src="images/banner/custom-pool-poly.JPG" alt="" />
                 </div>
                 <div class="col-xs-4 center">
-                    <h2>Custom</h2>
+                    <h2>Custom Options</h2>
                     <h3>Logos</h3>
                     <h3>Pools</h3>
                     <h3>Plus More...</h3>
@@ -129,6 +129,11 @@
             </div>
             <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 gap">
                 <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
+                <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
+                <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
+                <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
+                <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
+                <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and tested many different products in numerous applications so we know what works.</p>
             </div>
     </div> 
 
@@ -137,7 +142,8 @@
     <!-- Footer -->
     <div class="social-media-footer">
 
-    <div class="center">
+    
+        <div class="center">
             <a class="fa-3x" href="#twitter">
                 <i class="fa fa-twitter"></i>
             </a>
@@ -153,16 +159,18 @@
             <a class="fa-3x" href="#">
                 <i class="fa fa-youtube"></i>
             </a>
+
             <a class="fa-3x pull-right" href="#">
                 <i class="fa fa-arrow-up"></i>
             </a>
 
-            </div>
-  
+        </div>
+        
 
 
 
-    </div>   
+    </div>
+ 
     <!-- /Footer -->
 
 
