case-sensitive image links

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             <div class="row col-xs-12">
                 <div class="col-md-5">
                     <ul class='kwicks kwicks-home kwicks-horizontal'>
-                        <li><img src="images/special/poly1.jpg" alt="" /></li>
-                        <li><img src="images/special/poly2.jpg" alt="" />  </li>
-                        <li><img src="images/special/poly3.jpg" alt="" />  </li>
+                        <li><img src="images/special/poly1.JPG" alt="" /></li>
+                        <li><img src="images/special/poly2.JPG" alt="" />  </li>
+                        <li><img src="images/special/poly3.JPG" alt="" />  </li>
                     </ul>                
                         
                 </div>
@@ -160,8 +160,8 @@
                 <div class="col-md-5">
                     <ul class='kwicks kwicks-home kwicks-horizontal'>
                         <li><img src="images/special/gp1.png" alt="" /></li>
-                        <li><img src="images/special/gp2.jpg" alt="" />  </li>
-                        <li><img src="images/special/gp3.jpg" alt="" />  </li>
+                        <li><img src="images/special/gp2.JPG" alt="" />  </li>
+                        <li><img src="images/special/gp3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
                 <div class="col-md-7">
@@ -181,9 +181,9 @@
             <div class="row col-xs-12">
                 <div class="col-md-5">
                     <ul class='kwicks kwicks-home kwicks-horizontal'>
-                        <li><img src="images/special/custom1.jpg" alt="" /></li>
-                        <li><img src="images/special/custom3.jpg" alt="" />  </li>
-                        <li><img src="images/special/custom2.jpg" alt="" />  </li>
+                        <li><img src="images/special/custom1.JPG" alt="" /></li>
+                        <li><img src="images/special/custom3.JPG" alt="" />  </li>
+                        <li><img src="images/special/custom2.JPG" alt="" />  </li>
                     </ul> 
                 </div>
                 <div class="col-md-7">
