case-sensitive image links

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="row col-xs-12">
                 <div class="col-md-5">
                     <ul class='kwicks kwicks-home kwicks-horizontal'>
-                        <li><img src="images/special/poly1.JPG" alt="" /></li>
+                        <li><img src="images/special/poly1.jpg" alt="" /></li>
                         <li><img src="images/special/poly2.JPG" alt="" />  </li>
                         <li><img src="images/special/poly3.JPG" alt="" />  </li>
                     </ul>                
