--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
             <!--<a href="">Residential</a>
             <a href="">Commercial</a>-->
             <a href="services.html" class="active">Services</a>
-            <a href="">Our Work</a>
+            <!--<a href="">Our Work</a>-->
             <a href="contact.html">Contact</a>
         </nav>
     </div>
@@ -42,7 +42,7 @@
 
     <!-- Poly Service -->
     <div class="poly-service col-md-10 col-md-offset-1 col-xs-12">
-        <h1 class="headline headline-margin wow animated rollIn container-fluid">
+        <h1 class="headline headline-margin container-fluid">
             <span>Polyaspartic Chip & Quartz Floor Coating System</span>
         </h1>
 
@@ -58,7 +58,7 @@
                         <div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                             <div class="sl-slide-inner">
                              <ul class='kwicks kwicks-service kwicks-horizontal'>
-                                <li><img src="images/services/poly2-before.jpg" alt="" /></li>
+                                <li><img src="images/services/poly2-before.JPG" alt="" /></li>
                                 <li><img src="images/services/poly2-after.jpg" alt="" />  </li>
                             </ul>
                         </div>
@@ -67,8 +67,8 @@
                     <div class="sl-slide" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                         <div class="sl-slide-inner">
                             <ul class='kwicks kwicks-service kwicks-horizontal'>
-                                <li><img src="images/services/chiller-before.jpg" alt="" /></li>
-                                <li><img src="images/services/chiller-after.jpg" alt="" />  </li>
+                                <li><img src="images/services/chiller-before.JPG" alt="" /></li>
+                                <li><img src="images/services/chiller-after.JPG" alt="" />  </li>
                             </ul> 
                         </div>
                     </div>
@@ -97,7 +97,7 @@
         <div class="col-md-6 col-xs-12">
             <div class="col-xs-10 col-xs-offset-1">
                 <div class="row">
-                    <h2 class="headline headline-margin wow animated rollIn container-fluid">
+                    <h2 class="headline headline-margin container-fluid">
                         <span>System Advantages</span>
                     </h2>
                 </div>
@@ -130,7 +130,7 @@
         <div class="col-md-6">
             <div class="col-xs-10 col-xs-offset-1">
                 <div class="row">
-                    <h2 class="headline headline-margin wow animated rollIn container-fluid">
+                    <h2 class="headline headline-margin container-fluid">
                         <span>Typical Applications</span>
                     </h2>
                 </div>
