--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <!--<a href="">Residential</a>
             <a href="">Commercial</a>-->
             <a href="services.html">Services</a>
-            <a href="">Our Work</a>
+            <!--<a href="">Our Work</a>-->
             <a href="#" class="active">Contact</a>
         </nav>
     </div>
