--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         </div>
         <div class="col-md-8">
-            <p>Floor Coat Inc. is a family run business, which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and have tested many different products in numerous applications so we know what works.</p>
+            <p>Floor Coat Inc. is an Edmonton based decorative flooring company serving all Alberta. We are a family run business which means every job is approached with pure professionalism. We are a group of perfectionists who take great pride in our work so you can trust that you are getting our best effort in every job we do. What sets us aside from everyone else is we have over 60 years of contracting experience, we have unique pieces of equipment, and have tested many different products in numerous applications so we know what works.</p>
         </div>
         <div class="col-md-2">
 
@@ -145,7 +145,7 @@
                     <div class="special-align">
                         <p class="container-fluid">We can improve your damaged, slippery, ugly, and hard to clean concrete floor. A concrete floor covered with our polyaspartic chip or quartz coating looks great, adds life to your floor, and is easy to maintain. With the high flexibility of the polyaspartic coating it withstands abuse and last longer than anything else, making it ideal for both residential and commercial application.</p>
                     </div>
-                    <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                    <a href="services.html#poly" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
                     
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 <div class="col-md-7">
                     <div class="special-align">
                         <p class="container-fluid">Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.</p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                        <a href="services.html#epoxy" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
                     </div>          
                 </div>
             </div>
