--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,21 @@
 
 
     <div class="row">
-        <div class="col-md-5 col-md-offset-1">
+        <div class="col-md-4">
             <span class="fa-stack fa-lg fa-4x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-envelope fa-stack-1x"></i>  
             </span>
         <h3>Floorcoat@shaw.ca</h2>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-4">
+            <span class="fa-stack fa-lg fa-4x">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-compass fa-stack-1x"></i>  
+            </span>
+        <h3>Edmonton, AB</h2>
+        </div>
+        <div class="col-md-4">
             <span class="fa-stack fa-lg fa-4x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-phone fa-stack-1x"></i>  
