--- a/services.html
+++ b/services.html
@@ -428,7 +428,7 @@
         $(".fancybox-effects").fancybox({
             helpers : {
                 title : {
-                    type : 'over'
+                    type : 'inside'
                 }
             }
         });
