--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400|Roboto|Roboto+Slab:300,400' rel='stylesheet' type='text/css'>
     <link rel="icon" href="favicon.ico">
 
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
@@ -22,15 +21,13 @@
 
     <div id="preloader"></div>
 
-    <header>
-        <div class="container">
-            <h1 id="logo"><a href="index.html">Floor Coat Inc.</a></h1>
-            <nav>
-            <!--<a href="">Residential</a>
-            <a href="">Commercial</a>-->
+<header>
+    <div class="container">
+        <h1 id="logo"><a href="index.html">Floor Coat Inc.</a></h1>
+        <nav>
             <a href="services.html">Services</a>
-            <!--<a href="">Our Work</a>-->
-            <a href="#" class="active">Contact</a>
+            <a href ="doityourself.html">Do It Yourself</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </div>
 </header>
@@ -72,12 +69,12 @@
 
     </div>
     <div class="row center contact-social-icon">
-        <a class="fa-5x" href="#twitter"><i class="fa fa-twitter"></i></a>
-        <a class="fa-5x" href="#facebok"><i class="fa fa-facebook"></i></a>
-        <a class="fa-5x" href="#"><i class="fa fa-pinterest"></i></a>
-        <a class="fa-5x" href="#"><i class="fa fa-linkedin"></i></a>
-        <a class="fa-5x" href="#"><i class="fa fa-youtube"></i></a>
-
+        <a class="fa-5x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
+        <a class="fa-5x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
+        <a class="fa-5x" href="https://.pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
+        <a class="fa-5x" href="https://.linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
+        <a class="fa-5x" href="https://.youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
+        <a class="fa-5x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
     </div>
 
 
