--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
     <div class="container">
         <h1 id="logo"><a href="index.html">Floor Coat Inc.</a></h1>
         <nav>
-            <a href="services.html" class="active">Services</a>
-            <!--<a href="">Our Work</a>-->
+            <a href="services.html">Services</a>
+            <a href ="doityourself.html">Do It Yourself</a>
             <a href="contact.html">Contact</a>
         </nav>
     </div>
@@ -293,21 +293,35 @@
 
                 <a class="fancybox fancybox-effects" href="images/services/logo/13-b.JPG" data-fancybox-group="gallery4" title="Polyaspartic Coating Shop Floor - VIP Logo"><img src="images/services/logo/13-s.JPG" alt="" /></a>
 
+                <div class="row center service-contact">
+
+                    <i class="fa fa-3x fa-hand-o-right pull-left"><a href="contact.html">  CONTACT US</a><span class="service-span"> to book your appointment</span></i>
+                </div>
+
             </div>
             <div class="col-md-6 col-xs-12">
-
                 <div class="row col-xs-10 col-xs-offset-1">
-
-
+                    <p>Floor Coat Inc. has perfected the art of placing logos on any surface. We offer all types of logos including, vinyl logos on a coated floor protected by our polayaspartic coatings. We can produce logos with dye into grind and polished concrete. We have the equipment to artistically engrave into existing concrete Interior or exterior we place art in concrete, some recent projects included the wall at the LRT for the new Edmonton downtown arena and path logos for the city of St. Albert</p> 
                 </div>
 
                 <div class="row col-xs-10 col-xs-offset-1">
-
-
+                    <h2>Benfits</h2>
+                    <div id="poly-advantages">
+                        <ul>
+                             <li><b>Brand Recognition:</b> Improve any business showroom! we can put your company’s logo directly in your great looking floor.</li>
+                             <li><b>Easy to clean, seamless surface:</b> Our logos combined with our floor coatings offer durable surfaces that can easily be wiped clean with no maintenance. </li>
+                        </ul>
+                    </div>
                 </div>
 
-
-
+                <div class="row col-xs-10 col-xs-offset-1">
+                    <h2>Typical Applications</h2>
+                    <div id="poly-advantages">
+                        <ul>
+                            <li>Offices, Show Rooms, Warehouses & Distribution Facilities, Manufacturing Plants, Schools, Hospitals, Design on Urban Concrete</li>
+                        </ul>
+                    </div>  
+                </div>
 
             </div>
         </div>
@@ -353,19 +367,38 @@
 
                 <a class="fancybox fancybox-effects" href="images/services/commercial/15-b.JPG" data-fancybox-group="gallery5" title="Sample Epoxy Colors - Unicon Concrete"><img src="images/services/commercial/15-s.JPG" alt="" /></a>
 
+                <div class="row center service-contact last-service">
+
+                    <i class="fa fa-3x fa-hand-o-right pull-left"><a href="contact.html">  CONTACT US</a><span class="service-span"> to book your appointment</span></i>
+                </div>
+
             </div>
             <div class="col-md-6 col-xs-12">
 
                 <div class="row col-xs-10 col-xs-offset-1">
-
-
+                    <p>Floor Coat Inc. offers decorative flooring solutions for any commercial concrete floor. Protect your floor while adding something that looks great and will withstand whatever you can throw at it. We specialize in custom logos, polyaspartic floor coatings or grind & polished concrete.</p> 
                 </div>
 
                 <div class="row col-xs-10 col-xs-offset-1">
-
-
+                    <h2>Benfits</h2>
+                    <div id="poly-advantages">
+                        <ul>
+                             <li><b>Brand Recognition:</b> We can put your company ahead of the competition with a unique looking floor with your company’s logo.</li>
+                             <li><b>Easy to clean, seamless surface:</b> Our grind and polished, polyaspartics, or epoxy floor coatings offers durable, seamless surfaces that can easily be wiped clean with very little upkeep.</li>
+                             <li><b>Cost Savings:</b> Rejuvenating an old slab or finishing a brand new slab, we provide you with a durable and heard wearing surface which means your floor will last for years to come with easy maintenance.</li>
+                             <li><b>Chemically Resistant:</b> Our floor coatings are chemically resistant for all commercial flooring purposes.</li>
+                        </ul>
+                    </div>
                 </div>
 
+                <div class="row col-xs-10 col-xs-offset-1">
+                    <h2>Typical Applications</h2>
+                    <div id="poly-advantages">
+                        <ul>
+                            <li>Offices, Manufacturing Plants, Show Rooms, Warehouses & Distribution Facilities, Schools, Hospitals, Retail Space, High Traffic Areas</li>
+                        </ul>
+                    </div>  
+                </div>
 
 
 
@@ -381,12 +414,12 @@
 <!-- Footer -->
 <div class="row col-xs-10 col-xs-offset-1 social-media-footer">
     <div class="center">
-        <a class="fa-3x" href="#twitter"><i class="fa fa-twitter"></i></a>
-        <a class="fa-3x" href="#facebok"><i class="fa fa-facebook"></i></a>
-        <a class="fa-3x" href="#"><i class="fa fa-pinterest"></i></a>
-        <a class="fa-3x" href="#"><i class="fa fa-linkedin"></i></a>
-        <a class="fa-3x" href="#"><i class="fa fa-youtube"></i></a>
-
+        <a class="fa-3x" href="https://twitter.com/EngraveConcrete"><i class="fa fa-twitter"></i></a>
+        <a class="fa-3x" href="https://facebook.com/floorcoat"><i class="fa fa-facebook"></i></a>
+        <a class="fa-3x" href="https://pinterest.com/floorcoat/"><i class="fa fa-pinterest"></i></a>
+        <a class="fa-3x" href="https://linkedin.com/pub/jordan-chorneyko/93/99b/671"><i class="fa fa-linkedin"></i></a>
+        <a class="fa-3x" href="https://youtube.com/user/decorativesurfaces?feature=guide"><i class="fa fa-youtube"></i></a>
+        <a class="fa-3x" href="https://www.yelp.com/biz/floor-coat-inc-st-albert"><i class="fa fa-yelp"></i></a>
     </div>
 </div>
 <!-- /Footer -->
