--- a/doityourself.html
+++ b/doityourself.html
@@ -22,14 +22,26 @@
     <div id="preloader"></div>
 
 <header>
-    <div class="container">
-        <h1 id="logo"><a href="index.html">Floor Coat Inc.</a></h1>
-        <nav>
-            <a href="services.html">Services</a>
-            <a href ="doityourself.html">Do It Yourself</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>
+    <nav class="navbar navbar-fixed-top myNav">
+        <div class="navContainer">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle myToggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <h1 class="brand"><a href="index.html">Floor Coat Inc.</a></h1>
+            </div>
+        <div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right myNavMenu">
+            <li><a href="services.html">Services</a></li>
+            <li><a href="doityourself.html">Do It Yourself</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+    </nav>
 </header>
 
 <!-- /header -->
@@ -44,14 +56,14 @@
         </h1>
     </div>
 
-    <div class="col-xs-12">
-        <div class="col-md-4 col-xs-6 col-xs-offset-3>">
+    <div class="row container-fluid">
+        <div id="noOverflow" class="col-xs-4">
             <img class="center" src="images/doit/doit1.png" alt="" />
         </div>
-        <div class="col-md-4 col-xs-6 col-xs-offset-3>">
+        <div id="noOverflow" class="col-xs-4">
             <img class="center" src="images/doit/doit2.png" alt="" />
         </div>
-        <div class="col-md-4 col-xs-6 col-xs-offset-3>">
+        <div id="noOverflow" class="col-xs-4">
             <img class="center" src="images/doit/doit3.png" alt="" />
         </div>
     </div>
