--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel='stylesheet' href='css/jquery.kwicks.css' />
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
 
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
@@ -25,14 +25,26 @@
     <div id="preloader"></div>
 
 <header>
-    <div class="container">
-        <h1 id="logo"><a href="index.html">Floor Coat Inc.</a></h1>
-        <nav>
-            <a href="services.html">Services</a>
-            <a href ="doityourself.html">Do It Yourself</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>
+    <nav class="navbar navbar-fixed-top myNav">
+        <div class="navContainer">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle myToggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <h1 class="brand"><a href="#">Floor Coat Inc.</a></h1>
+            </div>
+        <div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right myNavMenu">
+            <li><a href="services.html">Services</a></li>
+            <li><a href="doityourself.html">Do It Yourself</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+    </nav>
 </header>
 <!-- /header -->
 
@@ -131,21 +143,21 @@
             <h2 class="headline headline-margin container-fluid">
                 <span>Polyaspartic Chip & Quartz Floor Coating</span>
             </h2>
-            <div class="row col-lg-12">
-                <div class="col-lg-5 col-lg-offset-0 col-sm-10 col-sm-offset-1">
-                    <ul class='kwicks kwicks-home kwicks-horizontal'>
+            <div class="row">
+                <div class=" col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                    <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-poly/poly1.JPG" alt="" /></li>
-                        <li><img src="images/home-poly/poly2.JPG" alt="" />  </li>
-                        <li><img src="images/home-poly/poly3.JPG" alt="" />  </li>
+                        <li><img src="images/home-poly/poly2.JPG" alt="" /> </li>
+                        <li><img src="images/home-poly/poly3.JPG" alt="" /> </li>
                     </ul>                
                         
                 </div>
-                <div class="col-lg-7 col-lg-offset-0 col-sm-10 col-sm-offset-1">
+                <div class="col-lg-7 col-md-6 col-sm-12">
 
                     <div class="special-align">
                         <p class="container-fluid">We can improve your damaged, slippery, ugly, and hard to clean concrete floor. A concrete floor covered with our polyaspartic chip or quartz coating looks great, adds life to your floor, and is easy to maintain. With the high flexibility of the polyaspartic coating it withstands abuse and last longer than anything else, making it ideal for both residential and commercial application.</p>
                     </div>
-                    <a href="services.html#poly" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                    <a href="services.html#poly" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     
                 </div>
             </div>
@@ -156,16 +168,16 @@
             <h2 class="headline headline-margin container-fluid">
                 <span>Epoxy Floor Coating</span>
             </h2>
-            <div class="row col-xs-12">
-                <div class="col-md-5">
-                    <ul class='kwicks kwicks-home kwicks-horizontal'>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                    <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-epoxy/epoxy3.JPG" alt="" /></li>
                         <li><img src="images/home-epoxy/epoxy2.JPG" alt="" />  </li>
                         <li><img src="images/home-epoxy/epoxy1.JPG" alt="" />  </li>
                     </ul>  
 
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7 col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.</p>
                         <a href="services.html#epoxy" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
@@ -179,15 +191,15 @@
             <h2 class="headline headline-margin container-fluid">
                 <span>Grind & Polished Concrete</span>
             </h2>
-            <div class="row col-xs-12">
-                <div class="col-md-5">
-                    <ul class='kwicks kwicks-home kwicks-horizontal'>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                    <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-grind/gp1.JPG" alt="" /></li>
                         <li><img src="images/home-grind/gp2.JPG" alt="" />  </li>
                         <li><img src="images/home-grind/gp3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7 col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Concrete has always been famous for its durability, but recently it’s becoming the most popular decorative flooring option because its rich look and cost-saving features. We offer industry leading technology and techniques including many pieces of machinery for all sizes of any commercial or residential floors.</p>
                         <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
@@ -201,15 +213,15 @@
             <h2 class="headline headline-margin container-fluid">
                 <span>Custom Logos</span>
             </h2>
-            <div class="row col-xs-12">
-                <div class="col-md-5">
-                    <ul class='kwicks kwicks-home kwicks-horizontal'>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                    <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-custom/custom1.JPG" alt="" /></li>
                         <li><img src="images/home-custom/custom2.JPG" alt="" />  </li>
                         <li><img src="images/home-custom/custom3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7 col-md-6 sol-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Show off your logo in style! Add your logo to any of our flooring solutions to create your perfect space. Whether it be residential or commercial, the possibilities are endless with Floor Coat on your side.</p>
                         <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
@@ -224,16 +236,16 @@
             <h2 class="headline headline-margin container-fluid">
                 <span>Commercial Flooring Options</span>
             </h2>
-            <div class="row col-xs-12">
-                <div class="col-md-5">
-                    <ul class='kwicks kwicks-home kwicks-horizontal'>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                    <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-commercial/comm1.JPG" alt="" /></li>
                         <li><img src="images/home-commercial/comm2.JPG" alt="" />  </li>
                         <li><img src="images/home-commercial/comm3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
 
-                <div class="col-md-7">
+                <div class="col-lg-7 col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Create the perfect flooring solution for any of your commercial flooring needs. </p>
                         <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
