--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <span>Polyaspartic Chip & Quartz Floor Coating</span>
             </h2>
             <div class="row">
-                <div class=" col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                <div class="col-md-5 col-md-offset-1">
                     <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-poly/poly1.JPG" alt="" /></li>
                         <li><img src="images/home-poly/poly2.JPG" alt="" /> </li>
@@ -152,12 +152,12 @@
                     </ul>                
                         
                 </div>
-                <div class="col-lg-7 col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12">
 
                     <div class="special-align">
                         <p class="container-fluid">We can improve your damaged, slippery, ugly, and hard to clean concrete floor. A concrete floor covered with our polyaspartic chip or quartz coating looks great, adds life to your floor, and is easy to maintain. With the high flexibility of the polyaspartic coating it withstands abuse and last longer than anything else, making it ideal for both residential and commercial application.</p>
                     </div>
-                    <a href="services.html#poly" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
+                    <a href="services.html" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     
                 </div>
             </div>
@@ -169,7 +169,7 @@
                 <span>Epoxy Floor Coating</span>
             </h2>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                <div class="col-md-5 col-md-offset-1">
                     <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-epoxy/epoxy3.JPG" alt="" /></li>
                         <li><img src="images/home-epoxy/epoxy2.JPG" alt="" />  </li>
@@ -177,10 +177,10 @@
                     </ul>  
 
                 </div>
-                <div class="col-lg-7 col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.</p>
-                        <a href="services.html#epoxy" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                        <a href="services.html#epoxy" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>          
                 </div>
             </div>
@@ -192,17 +192,17 @@
                 <span>Grind & Polished Concrete</span>
             </h2>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                <div class="col-md-5 col-md-offset-1">
                     <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-grind/gp1.JPG" alt="" /></li>
                         <li><img src="images/home-grind/gp2.JPG" alt="" />  </li>
                         <li><img src="images/home-grind/gp3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
-                <div class="col-lg-7 col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Concrete has always been famous for its durability, but recently it’s becoming the most popular decorative flooring option because its rich look and cost-saving features. We offer industry leading technology and techniques including many pieces of machinery for all sizes of any commercial or residential floors.</p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -214,17 +214,17 @@
                 <span>Custom Logos</span>
             </h2>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                <div class="col-md-5 col-md-offset-1">
                     <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-custom/custom1.JPG" alt="" /></li>
                         <li><img src="images/home-custom/custom2.JPG" alt="" />  </li>
                         <li><img src="images/home-custom/custom3.JPG" alt="" />  </li>
                     </ul> 
                 </div>
-                <div class="col-lg-7 col-md-6 sol-sm-12">
+                <div class="col-md-6 sol-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Show off your logo in style! Add your logo to any of our flooring solutions to create your perfect space. Whether it be residential or commercial, the possibilities are endless with Floor Coat on your side.</p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                 <span>Commercial Flooring Options</span>
             </h2>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-0 col-md-5 col-md-offset-1">
+                <div class="col-md-5 col-md-offset-1">
                     <ul class="kwicks kwicks-home kwicks-horizontal col-centered">
                         <li><img src="images/home-commercial/comm1.JPG" alt="" /></li>
                         <li><img src="images/home-commercial/comm2.JPG" alt="" />  </li>
@@ -245,10 +245,10 @@
                     </ul> 
                 </div>
 
-                <div class="col-lg-7 col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Create the perfect flooring solution for any of your commercial flooring needs. </p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-4 col-xs-offset-4 center" role="button">Learn More</a>
+                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
