--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
 
 
         <div class="row">
-            <div class="col-md-5 col-md-offset-1 col-xs-12 ">
+            <div class="col-md-6 col-xs-12">
             <div class="center">
                 <a href="images/services/poly/poly1-b.JPG" class="swipebox" title="Polyaspartic Chip Custom Shop"><img src="images/services/poly/poly1-s.JPG"  />
                 </a>
@@ -136,7 +136,7 @@
         </h1>
 
         <div class="row">
-            <div class="col-md-5 col-md-offset-1 col-xs-12">
+            <div class="col-md-6 col-xs-12">
             <div class="center">
                 <a href="images/services/epoxy/epoxy1-b.JPG" class="swipebox" title="Clear Epoxy Coating - Brown Acid Stain Tile Cut Design"><img src="images/services/epoxy/epoxy1-s.JPG" alt="" /></a>
 
@@ -202,7 +202,7 @@
         </h1>
 
         <div class="row">
-            <div class="col-md-5 col-md-offset-1 col-xs-12">
+            <div class="col-md-6 col-xs-12">
             <div class="center">
 
                 <a href="images/services/gp/gp1-b.JPG" class="swipebox" title="Full Grind & Polished Concrete - Black Floor Dye"><img src="images/services/gp/gp1-s.JPG" alt="" /></a>
@@ -277,7 +277,7 @@
         </h1>
 
         <div class="row">
-            <div class="col-md-5 col-md-offset-1 col-xs-12">
+            <div class="col-md-6 col-xs-12">
             <div class="center">
                 <a href="images/services/logo/1-b.JPG" class="swipebox" title="Grind & Polished Concrete - Boilmakers Logo"><img src="images/services/logo/1-s.JPG" alt="" /></a>
 
@@ -347,7 +347,7 @@
         </h1>
 
         <div class="row">
-            <div class="col-md-5 col-md-offset-1 col-xs-12">
+            <div class="col-md-6 col-xs-12">
             <div class="center">
                 <a href="images/services/commercial/1-b.JPG class="swipebox""title="Custom Metallic Epoxy - Welness Within Spa"><img src="images/services/commercial/1-s.JPG" alt="" /></a>
 
