--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
 
-    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
-
-    <!--<script type="text/javascript" src="js/jquery-ui.min.js"></script>-->
-
 </head>
 <body>
 
@@ -180,7 +176,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Epoxy flooring is a unique way to turn ordinary concrete floor into a functional work of art. Decorative epoxy finishes offer a unique rich look with colour depth making it desirable for any residential or commercial application.</p>
-                        <a href="services.html#epoxy" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
+                        <a href="services.html" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>          
                 </div>
             </div>
@@ -202,7 +198,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Concrete has always been famous for its durability, but recently it’s becoming the most popular decorative flooring option because its rich look and cost-saving features. We offer industry leading technology and techniques including many pieces of machinery for all sizes of any commercial or residential floors.</p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
+                        <a href="services.html" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -224,7 +220,7 @@
                 <div class="col-md-6 sol-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Show off your logo in style! Add your logo to any of our flooring solutions to create your perfect space. Whether it be residential or commercial, the possibilities are endless with Floor Coat on your side.</p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
+                        <a href="services.html" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -248,7 +244,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="special-align">
                         <p class="container-fluid">Create the perfect flooring solution for any of your commercial flooring needs. </p>
-                        <a href="#" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
+                        <a href="services.html" class="btn-lg more-info-btn col-xs-6 col-xs-offset-3 center" role="button">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -283,6 +279,7 @@
 <!-- /Footer -->
 
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script type="text/javascript" src="js/jquery.kwicks.js"></script>
